--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Deploy Only
 
 on:
   push:
@@ -7,37 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    
-    env:
-      VITE_OPENAI_API_KEY: ${{ secrets.VITE_OPENAI_API_KEY }}
-      VITE_GROQ_API_KEY: ${{ secrets.VITE_GROQ_API_KEY }}
-      VITE_GROK_API_KEY: ${{ secrets.VITE_GROK_API_KEY }}
-      VITE_ADMIN_PASSWORD: ${{ secrets.VITE_ADMIN_PASSWORD }}
-      VITE_PORT: ${{ secrets.VITE_PORT }}
-
-    steps:
-      - name: Check out the repository
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Build
-        run: npm run build
-        
-      - name: Run linter
-        run: npm run lint
-
   deploy:
-    needs: build  # Only runs if the build job succeeds
     runs-on: ubuntu-latest
 
     steps:
