--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Deploy Only
+name: Build and Deploy
 
 on:
   push:
@@ -7,21 +7,25 @@ on:
     branches: [ main ]
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: self-hosted
 
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
-
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          node-version: '18'
+          cache: 'npm'
+          
+      - name: Install dependencies
+        run: npm install
 
-      - name: Deploy to Local Machine
-        env:
-          HOST: "katsana.myds.me"
-          USER: "katsana"
+      - name: Build the application
+        run: npm run build
+
+      - name: Restart the application
         run: |
-          ssh -o StrictHostKeyChecking=no -p 5022 $USER@$HOST "cd ~/quizzy && ./deploy-script.sh"
+          pm2 restart quizzy || pm2 start app.js --name quizzy
