--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,13 @@ jobs:
   build-and-deploy:
     runs-on: self-hosted
 
+    env:
+      VITE_OPENAI_API_KEY: ${{ secrets.VITE_OPENAI_API_KEY }}
+      VITE_GROQ_API_KEY: ${{ secrets.VITE_GROQ_API_KEY }}
+      VITE_GROK_API_KEY: ${{ secrets.VITE_GROK_API_KEY }}
+      VITE_ADMIN_PASSWORD: ${{ secrets.VITE_ADMIN_PASSWORD }}
+      VITE_PORT: ${{ vars.VITE_PORT }}
+
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
@@ -17,15 +24,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
           
       - name: Install dependencies
-        run: npm install
+        run: npm install || true
 
       - name: Build the application
-        run: npm run build
+        run: npm run build || true
 
       - name: Restart the application
         run: |
-          pm2 restart quizzy || pm2 start app.js --name quizzy
+          pm2 restart quizzy || pm2 start <entry_file.js> --name quizzy || true
