--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,6 @@ jobs:
       VITE_PORT: ${{ vars.VITE_PORT }}
 
     steps:
-      - name: Fix permissions
-        run: |
-          sudo chown -R $USER:$USER $GITHUB_WORKSPACE
-          
       - name: Check out the repository
         uses: actions/checkout@v4
       
@@ -39,5 +35,4 @@ jobs:
         
       - name: Cleanup build artifacts
         if: always()
-        run: |
-          sudo rm -rf dist || true
+        run: rm -rf dist || exit 0
