--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Build the application
         run: npm run build
         
+      - name: Copy favicon to dist
+        run: cp public/favicon.svg dist/
+
       - name: Copy build files to deployment directory
         run: |
           rm -rf ~/quizzy/dist || true
